# aws-deploy-webapp

./: README.md  pyproject.toml
app_runner/: apprunner.yaml  manage.py  requirements.txt  startup.sh
app_runner/app_runner/: asgi.py  settings.py  urls.py  views.py  wsgi.py
app_runner/infra/: main.tf
app_runner/polls/: views.py
app_runner/polls/migrations/: 0001_initial.py
infra/: .terraform.lock.hcl  main.tf
