[tool.poetry]
name = "deploying-webapp"
version = "0.1.0"
description = ""
authors = ["Tze Yang Ng <tzeyang@dsaid.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

